--- a/package.json
+++ b/package.json
@@ -3,6 +3,7 @@
     "bcrypt": "^6.0.0",
     "ejs": "^3.1.10",
     "express": "^5.2.1",
+    "express-fileupload": "^1.5.2",
     "jsonwebtoken": "^9.0.3",
     "mysql2": "^3.15.3",
     "nodemon": "^3.1.11",
